# paec-grammar

./: README.md  javapaec.g4  paec.g4  pypaec.g4
evaluation/: check_incipits.py  check_incipits_par.py  evaluate_errors.py  test.txt
pypaec/: pypaec.interp  pypaec.py  pypaec.tokens  pypaecLexer.interp  pypaecLexer.py  pypaecListener.py  pypaecParser.py  pyproject.toml
